--- a/.eslintrc
+++ b/.eslintrc
@@ -1,71 +1,42 @@
 {
-  // Configuration for JavaScript files
-  "extends": [
-    "airbnb-base",
-    "next/core-web-vitals", // Needed to avoid warning in next.js build: 'The Next.js plugin was not detected in your ESLint configuration'
-    "plugin:prettier/recommended"
-  ],
-  "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "singleQuote": true,
-        "endOfLine": "auto"
-      }
-    ]
-  },
-  "overrides": [
-    // Configuration for TypeScript files
-    {
-      "files": ["**/*.ts", "**/*.tsx"],
-      "plugins": [
-        "@typescript-eslint",
-        "unused-imports",
-        "tailwindcss",
-        "simple-import-sort"
-      ],
-      "extends": [
-        "plugin:tailwindcss/recommended",
-        "airbnb-typescript",
-        "next/core-web-vitals",
-        "plugin:prettier/recommended"
-      ],
-      "parserOptions": {
-        "project": "./tsconfig.json"
-      },
-      "rules": {
-        "prettier/prettier": [
-          "error",
-          {
-            "singleQuote": true,
-            "endOfLine": "auto"
-          }
-        ],
-        "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
-        "react/require-default-props": "off", // Allow non-defined react props as undefined
-        "react/jsx-props-no-spreading": "off", // _app.tsx uses spread operator and also, react-hook-form
-        "react-hooks/exhaustive-deps": "off", // Incorrectly report needed dependency with Next.js router
-        "@next/next/no-img-element": "off", // We currently not using next/image because it isn't supported with SSG mode
-        "@next/next/link-passhref": "off", // Only needed when the child of Link wraps an <a> tag
-        "@typescript-eslint/comma-dangle": "off", // Avoid conflict rule between Eslint and Prettier
-        "@typescript-eslint/consistent-type-imports": "error", // Ensure `import type` is used when it's necessary
-        "no-restricted-syntax": [
-          "error",
-          "ForInStatement",
-          "LabeledStatement",
-          "WithStatement"
-        ], // Overrides Airbnb configuration and enable no-restricted-syntax
-        "import/prefer-default-export": "off", // Named export is easier to refactor automatically
-        "tailwindcss/no-custom-classname": "off", // Disabled otherwise nightmare to allow each custom tailwind classes
-        "simple-import-sort/imports": "error", // Import configuration for `eslint-plugin-simple-import-sort`
-        "simple-import-sort/exports": "error", // Export configuration for `eslint-plugin-simple-import-sort`
-        "@typescript-eslint/no-unused-vars": "off",
-        "unused-imports/no-unused-imports": "error",
-        "unused-imports/no-unused-vars": [
-          "error",
-          { "argsIgnorePattern": "^_" }
-        ]
-      }
+  "extends": ["alloy", "alloy/typescript"],
+  "parserOptions": {
+    "parser": {
+      "js": "@babel/eslint-parser",
+      "jsx": "@babel/eslint-parser",
+
+      "ts": "@typescript-eslint/parser",
+      "tsx": "@typescript-eslint/parser"
+
+      // Leave the template parser unspecified, so that it could be determined by `<script lang="...">`
     }
-  ]
+  },
+  "env": {
+    // Your environments (which contains several predefined global variables)
+    //
+    "browser": true,
+    "node": true
+    // mocha: true,
+    // jest: true,
+    // jquery: true
+  },
+  "globals": {
+    // Your global variables (setting to false means it's not allowed to be reassigned)
+    //
+    "ComponentInstance": true
+  },
+  "rules": {
+    // Customize your rules
+    //
+    "@typescript-eslint/no-use-before-define": [
+      "error",
+      { "functions": false }
+    ],
+    "@typescript-eslint/no-unused-vars": 2,
+    // Please keep this rule off because it requiresTypeChecking
+    // https://github.com/vuejs/vue-eslint-parser/issues/104
+    // https://github.com/typescript-eslint/typescript-eslint/pull/5318
+    "@typescript-eslint/prefer-optional-chain": "off",
+    "@typescript-eslint/no-require-imports": "off"
+  }
 }
