--- a/package.json
+++ b/package.json
@@ -15,14 +15,29 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next/env": "^13.4.19",
+    "antd": "^5.8.4",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "md-editor-rt": "^4.3.0",
     "next": "^13.4.12",
     "next-seo": "^6.1.0",
+    "next-with-less": "^3.0.1",
+    "postcss-px-to-viewport-8-plugin": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "react-input-emoji": "^5.3.1",
+    "react-use": "^17.4.0",
+    "sass": "^1.66.1",
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "typed.js": "^2.0.16",
+    "vanilla-back-to-top": "^7.2.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.10",
     "@next/bundle-analyzer": "^13.4.12",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
@@ -34,6 +49,7 @@
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-alloy": "^5.1.1",
     "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -48,6 +64,7 @@
     "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "tailwindcss": "^3.3.3",
