--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,11 @@
 ###
  # @Author: ChangCheng
  # @Date: 2023-08-19 17:28:26
- # @LastEditTime: 2023-08-19 17:28:31
+ # @LastEditTime: 2023-08-20 10:46:08
  # @LastEditors: ChangCheng
  # @Description: 
  # @FilePath: \next-blog-front\.env.development
 ### 
 
 NEXT_PUBLIC_VITE_API_BASE_URL  = '/api'
+NEXT_PUBLIC_SUPPRESS_ERROR_NOTIFICATIONS = true
