--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
     "@next/env": "^13.4.19",
     "antd": "^5.8.4",
     "axios": "^1.4.0",
@@ -33,7 +34,6 @@
     "sass": "^1.66.1",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "typed.js": "^2.0.16",
-    "vanilla-back-to-top": "^7.2.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
