--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,9 @@ jobs:
                   port: 22
                   pass: ${{ secrets.REMOTE_PASSWORD }}
                   run: | 
-                    sudo ln -s "$NVM_DIR/versions/node/$(nvm version)/bin/npm" "/usr/local/bin/npm" 
-                    sudo ln -s "$NVM_DIR/versions/node/$(nvm version)/bin/pm2" "/usr/local/bin/pm2"
+                    export NVM_DIR=~/.nvm
+                    source ~/.nvm/nvm.sh
+                    npm --help
                     cd /root/next/next-blog-front
                     pm2 kill
                     git pull origin
