--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
                   run: | 
                     cd /root/next/next-blog-front
                     export PATH=$PATH:/usr/local/nodejs/bin
-                    /usr/local/nodejs/bin/pm2 kill
+                    /usr/local/nodejs/bin/pm2 stop my-blog
                     git pull origin
                     /usr/local/nodejs/bin/npm run install
                     /usr/local/nodejs/bin/npm run build
